# -INTELLIFLOW

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/agent-a-summarizer/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/agent-a-summarizer/src/: __init__.py  main.py
backend/agent-a-summarizer/src/agents/: __init__.py  summarizer.py  tools.py
backend/agent-a-summarizer/src/api/: __init__.py  dependencies.py
backend/agent-a-summarizer/src/api/routes/: __init__.py  health.py  summarize.py
backend/agent-a-summarizer/src/core/: __init__.py  config.py
backend/agent-a-summarizer/src/schemas/: __init__.py  email.py  summary.py
backend/agent-a-summarizer/src/services/: __init__.py  agent_b_client.py  gmail_service.py  llm_service.py
backend/agent-a-summarizer/tests/: __init__.py  conftest.py
backend/agent-b-calendar/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/agent-b-calendar/src/: __init__.py  main.py
backend/agent-b-calendar/src/api/: __init__.py  dependencies.py
backend/agent-b-calendar/src/core/: __init__.py  config.py  scopes.py
backend/agent-b-calendar/src/schemas/: __init__.py  calendar.py
backend/agent-b-calendar/src/services/: __init__.py  calendar_service.py
backend/agent-b-calendar/tests/: __init__.py  conftest.py
backend/api-gateway/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
backend/api-gateway/src/: app.ts  index.ts
backend/api-gateway/src/config/: index.ts
backend/api-gateway/src/middleware/: auth.middleware.ts  (+3 more)
backend/shared/: __init__.py  config.py  pyproject.toml
backend/shared/auth/: __init__.py  descope_client.py  scopes.py  token_validator.py
backend/shared/database/: __init__.py  connection.py
backend/shared/models/: __init__.py  base.py  calendar_event.py  email.py  user.py
backend/shared/utils/: __init__.py  exceptions.py  logger.py
docs/: agentic-rag-design.md  architecture.md  vector-db-schema.md
frontend/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/config/: api.config.ts  descope.config.ts
frontend/src/utils/: api-client.ts
scripts/: init-db.sql  seed-db.py  setup-descope.py
(+10 files in other folders)
